Add Mail functionality

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,12 @@ JWT_EXPIRES_IN=15     # in MINUTES
 # JWT Refresh Token
 JWT_REFRESH_SECRET=
 JWT_REFRESH_EXPIRES_IN=10080   # in MINUTES (7 days = 7*24*60 = 10080)
+
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="node-boilerplate@gmail.com"
+MAIL_FROM_NAME="${APP_NAME}"
