--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
         "cls-hooked": "^4.2.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
+        "ejs": "^3.1.10",
         "express": "^5.1.0",
         "figlet": "^1.9.4",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.15.3",
+        "nodemailer": "^7.0.10",
         "sequelize": "^6.37.7",
         "sequelize-cli": "^6.6.3",
         "winston": "^3.18.3",
