--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "dotenv": "^17.2.3",
         "ejs": "^3.1.10",
         "express": "^5.1.0",
+        "express-fileupload": "^1.5.2",
+        "express-validator": "^7.3.1",
         "figlet": "^1.9.4",
         "helmet": "^8.1.0",
         "jsonwebtoken": "^9.0.2",
